--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,79 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+* {
+  font-family: "Montserrat", sans-serif;
+}
+/* antd override */
 
+.ant-input {
+  border-radius: 2px;
+  height: 40px;
+  border: 1px solid rgba(128, 128, 128, 0.451) !important;
+}
+.ant-input:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: 1px solid gray !important;
+}
+.ant-form-item-label {
+  font-size: 16px !important;
+  color: black !important;
+}
+.ant-form-item {
+  margin: 10px 0 !important;
+}
+/* antd override */
+
+/* common styles */
+.card {
+  box-shadow: 0 0 2px gray;
+  border-radius: 0 !important;
+}
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.normal-text {
+  font-size: 1rem;
+}
+.primaryBtn {
+  background-color: #005555 !important;
+  border-color: #005555 !important;
+  color: White !important;
+  width: 100%;
+  height: 45px !important;
+  margin: 5% 0 !important;
+  font-size: 16px !important;
+}
+.formLink {
+  color: black;
+  text-decoration: none;
+  margin-top: 100px !important;
+  font-size: 16px !important;
+}
+.formLink:hover {
+  text-decoration: underline;
+}
+/* common styles */
+
+.auth {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #005555;
+}
+
+.authform {
+  width: 400px;
+}
+
+.auth .card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  background-color: orangered;
+  color: white;
+  max-width: max-content !important;
+  padding: 7px 15px;
+  margin-left: -40px;
+  border-bottom-left-radius: 10px !important;
+}
