login-regis Auth  func
login register front & back with node react redux toolkit

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,7 +54,23 @@
   text-decoration: underline;
 }
 /* common styles */
-
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.676);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+}
+.spinner-border {
+  width: 5rem;
+  height: 5rem;
+  color: white;
+}
 .auth {
   height: 100vh;
   display: flex;
