--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,8 @@
   height: 40px;
   border: 1px solid rgba(128, 128, 128, 0.451) !important;
 }
-.ant-input:focus {
+.ant-input:focus,
+.ant-picker {
   outline: none !important;
   box-shadow: none !important;
   border: 1px solid gray !important;
@@ -21,6 +22,14 @@
 .ant-form-item {
   margin: 10px 0 !important;
 }
+.ant-picker {
+  border-radius: 2px;
+  height: 40px;
+  border: 1px solid rgba(128, 128, 128, 0.451) !important;
+}
+.ant-picker-input input {
+  border: none !important;
+}
 /* antd override */
 
 /* common styles */
@@ -31,6 +40,7 @@
 .card-title {
   font-size: 1.5rem;
   font-weight: bold;
+  color: rgba(0, 0, 0, 0.498);
 }
 .normal-text {
   font-size: 1rem;
@@ -39,7 +49,7 @@
   background-color: #005555 !important;
   border-color: #005555 !important;
   color: White !important;
-  width: 100%;
+  width: max-content;
   height: 45px !important;
   margin: 5% 0 !important;
   font-size: 16px !important;
@@ -56,6 +66,11 @@
 /* common styles */
 .remix-icons {
   font-size: 18px;
+}
+.page-title {
+  font-size: 25px;
+  color: black;
+  font-weight: bold;
 }
 .loader {
   display: flex;
